# Parimate

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  config.yaml  deploy.sh  init.sql  pipeline.py  pyproject.toml  recognition_result.json  requirements.txt  setup.py  telegram_bot.py  test.py  test_temp.py  users.db  video_description_matching.py
cmd/app/: main.py
config/: config.yaml
internal/: video_description_matching.py
internal/adapter/database/sql/: __init__.py  user.py  user_photo.py
internal/app/: app.py
internal/domain/audio/: video_description_matching.py
internal/domain/audio/pipeline/: pipeline.py
internal/domain/deepfake/: __init__.py  deepfake.py
internal/domain/face_analysis/: face_analysis.py
internal/domain/service/: __init__.py  multithread_handler.py  service.py
internal/domain/utils/: __init__.py  video_prepare.py
internal/nlp_model/: nlp_processor.py
internal/pkg/face/: face_analysis.py
internal/speech_model/: __init__.py  audio_processor.py  model.py  speech_recognizer.py  test.py
internal/speech_model/parimate_test_videos/: process_and_recognize.py  recognition_results_trimmed.json  video_processor.py
internal/storage/database/sqlite3/: __init__.py  connection.py
internal/transport/tg/: __init__.py  telegram_bot.py
migrations/: init.sql
nlp_model/: nlp_processor.py
speech_model/: audio_processor.py  model.py  speech_recognizer.py
src/: face_analysis.py  video_analysis.py
src/routes/: router.py
src/services/: face_analysis.py
tests/config/: config.yaml
(+8 files in other folders)
